--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,2 +1,12 @@
 <!DOCTYPE html>
 <title>Quiltify Profile</title>
+<link rel="stylesheet" href="/stylesheets/stylesheet.css">
+
+<div class="heading">
+  <h3 class="webtitle">QUILTIFY</h3>
+  <div class="userbox">
+    <h4>{{FirstName LastName}}</h4>
+    <h5>{{email}}</h5>
+    <p>{{View Profile}} {{Logout}}<p>
+  </div>
+</div>
