--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <title>Quiltify Profile</title>
-<link rel="stylesheet" href="/stylesheets/stylesheet.css">
+<link rel="stylesheet" href="../stylesheets/stylesheet.css">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet">
 
 <div class="heading">
-  <h3 class="webtitle">QUILTIFY</h3>
+  <div class="webtitle">
+    <p>QUILTIFY</p>
+  </div>
   <div class="userbox">
-    <h4>{{FirstName LastName}}</h4>
-    <h5>{{email}}</h5>
+    <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
+      {{FirstName LastName}}</p>
+    <p>{{email}}</p>
     <p>{{View Profile}} {{Logout}}<p>
   </div>
 </div>
+
+sjdflsd
