heading update and new logo

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,6 +5,7 @@
 
 <div class="heading">
   <div class="webtitle">
+    <img class="logo" src="../photos/logo.png">
     <p>QUILTIFY</p>
   </div>
   <div class="userbox">
