--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -3,13 +3,25 @@
 font-family: 'Quicksand', sans-serif;
 font-family: 'Open Sans', sans-serif;
 
+/*Color pallette
+
+Deep Purple/Red: #542344
+Purple: #726DA8
+Violet Purple: #614BAB
+Blue: #5B92BD
+Mint: #A0D2DB
+Pale Mint: #BEE7E8
+PALER mint: #D7F2F2
+
+*/
+
 
 body {
   font-family: 'Open Sans', sans-serif;
 }
 
 .heading {
-  /* background-color: blue; */
+  background-color: #D7F2F2;
   height: 120px;
 }
 
@@ -17,9 +29,17 @@ body {
   font-family: 'Quicksand', sans-serif;
   /* background-color: green; */
   float: left;
+  padding-left: 10px;
+  font-size: 40px;
+  line-height: 25px;
+  display: flex;
+}
+
+.logo {
   padding: 10px;
-  height: 100px;
-  font-size: 30px;
+  padding-top: 20px;
+  padding-right: 20px;
+  height: 70px;
 }
 
 .userbox {
