--- a/templates/viewProject.html
+++ b/templates/viewProject.html
@@ -1,2 +1,24 @@
 <!DOCTYPE html>
 <title>Quiltify Project</title>
+<link rel="stylesheet" href="../stylesheets/stylesheet.css">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet">
+
+
+<div class="heading">
+  <div class="webtitle">
+    <img class="logo" src="../photos/logo.png">
+    <p>QUILTIFY</p>
+  </div>
+  <div class="userbox">
+    <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
+      {{FirstName LastName}}</p>
+    <p>{{email}}</p>
+    <p>{{View Profile}} {{Logout}}<p>
+  </div>
+</div>
+
+
+<p>{{projects}}</p>
+<p>{{hover}}</p>
+
+</style>
