--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -11,7 +11,7 @@ Violet Purple: #614BAB
 Blue: #5B92BD
 Mint: #A0D2DB
 Pale Mint: #BEE7E8
-PALER mint: #D7F2F2
+PALER mint: #E3F2F2
 
 */
 
@@ -20,19 +20,66 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+h2 {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 30px;
+  line-height: 0px;
+  padding-left: 10px;
+  font-weight: normal;
+}
+
+a.logo {
+  display: block;
+}
+
+.pagebody {
+  display: flex;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.navbar {
+  flex: 0 0 200px;
+  margin: 5px;
+  margin-top: 15px;
+  border: 2px;
+  border-radius: 2px;
+  box-shadow: 0 0 5px #542344;
+  padding: 10px;
+  text-align: center;
+}
+
+.content {
+  margin: 5px;
+  margin-top: 15px;
+  border: 2px;
+  border-radius: 2px;
+  box-shadow: 0 0 5px #542344;
+  padding: 10px;
+  width: 100%
+}
+
+.profilepic {
+  height: 100px;
+  border-radius: 50px;
+  margin-top: 10px;
+}
+
 .heading {
-  background-color: #D7F2F2;
-  height: 120px;
+  background-color: #E3F2F2;
+  height: 110px;
 }
 
 .webtitle {
   font-family: 'Quicksand', sans-serif;
-  /* background-color: green; */
   float: left;
   padding-left: 10px;
   font-size: 40px;
   line-height: 25px;
   display: flex;
+}
+
+.webtitle:hover {
+  cursor: pointer;
 }
 
 .logo {
@@ -44,8 +91,8 @@ body {
 
 .userbox {
   height: 100px;
-  width: 300px;
-  padding: 10px;
+  padding-right: 20px;
+  padding-top: 5px;
   text-align: right;
   float: right;
   /* background-color: orange; */
@@ -58,9 +105,6 @@ body {
 
 }
 
-.bioBox {
-
-}
 
 
 
