--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,14 +4,25 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet">
 
 <div class="heading">
-  <div class="webtitle">
+  <div class="webtitle" onclick="location.href='/'">
     <img class="logo" src="../photos/logo.png">
     <p>QUILTIFY</p>
   </div>
   <div class="userbox">
     <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
-      {{FirstName LastName}}</p>
-    <p>{{email}}</p>
-    <p>{{View Profile}} {{Logout}}<p>
+      {FirstName LastName}</p>
+    <p>{email}</p>
+    <p>{View Profile} | {Logout}<p>
+  </div>
+</div>
+
+<div class="pagebody">
+  <div class="navbar">
+    <img class="profilepic" src="../photos/logo.png">
+    <p>{FirstName LastName}</p>
+    <p>{biography}</p>
+  </div>
+  <div class="content">
+    <h2>My Projects</h2>
   </div>
 </div>
