added 2 items per row tables

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,2 +1,105 @@
 <!DOCTYPE html>
 <title>Quiltify Home</title>
+<link rel="stylesheet" href="../stylesheets/stylesheet.css">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet">
+
+
+
+<style>
+
+
+table {
+    border-collapse: separate;
+    border-spacing: 0 3em;
+}
+
+#artworks {
+  height: 250px;
+  width: 250px;
+  border: 1px solid black;
+  }
+
+
+</style>
+
+
+
+<div class="heading">
+  <div class="webtitle">
+    <p>QUILTIFY</p>
+  </div>
+  <div class="userbox">
+    <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
+      {{FirstName LastName}}</p>
+    <p>{{email}}</p>
+    <p>{{View Profile}} {{Logout}}<p>
+  </div>
+</div>
+
+
+
+
+<table align="center" id="columns">
+    <!--put in profiles-->
+<!--    {% for project in projects %}
+<div class="artworks"
+
+  style="all the fields;"></div>
+    {% endfor %} -->
+
+    <tr>
+    <td id="artworks">
+    </td>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+
+    <td id="artworks">
+    </td>
+    </tr>
+
+    <tr>
+    <td id="artworks">
+    </td>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+    <th></th>
+
+    <td id="artworks">
+    </td>
+    </tr>
+</table>
