--- a/templates/home.html
+++ b/templates/home.html
@@ -26,6 +26,7 @@ table {
 
 <div class="heading">
   <div class="webtitle">
+    <img class="logo" src="../photos/logo.png">
     <p>QUILTIFY</p>
   </div>
   <div class="userbox">
@@ -35,6 +36,7 @@ table {
     <p>{{View Profile}} {{Logout}}<p>
   </div>
 </div>
+
 
 
 
