--- a/templates/home.html
+++ b/templates/home.html
@@ -25,15 +25,19 @@ table {
 
 
 <div class="heading">
-  <div class="webtitle">
+  <div class="webtitle" onclick="location.href='/'">
     <img class="logo" src="../photos/logo.png">
     <p>QUILTIFY</p>
   </div>
   <div class="userbox">
-    <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
-      {{FirstName LastName}}</p>
-    <p>{{email}}</p>
-    <p>{{View Profile}} {{Logout}}<p>
+    {% if current_user %}
+      <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
+        FirstName LastName</p>
+      <p>email</p>
+      <p>View Profile | <a href="{{logout_url}}">Log Out</a><p>
+    {% else %}
+      <a href="{{login_url}}">Log In</a>
+    {% endif %}
   </div>
 </div>
 
