--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,10 +9,14 @@
     <p>QUILTIFY</p>
   </div>
   <div class="userbox">
-    <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
-      {FirstName LastName}</p>
-    <p>{email}</p>
-    <p>{View Profile} | {Logout}<p>
+    {% if current_user %}
+      <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
+        FirstName LastName</p>
+      <p>email</p>
+      <p>View Profile | <a href="{{logout_url}}">Log Out</a><p>
+    {% else %}
+      <a href="{{login_url}}">Log In</a>
+    {% endif %}
   </div>
 </div>
 
