--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -28,6 +28,15 @@ h2 {
   font-weight: normal;
 }
 
+a {
+  color: gray;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #542344;
+}
+
 a.logo {
   display: block;
 }
