--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -28,6 +28,13 @@ h2 {
   font-weight: normal;
 }
 
+h3 {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 20px;
+  line-height: 0px;
+  font-weight: 400;
+}
+
 a {
   color: gray;
   text-decoration: none;
@@ -46,13 +53,23 @@ a.logo {
   font-family: 'Open Sans', sans-serif;
 }
 
+.redborder {
+  border: 2px;
+  border-radius: 2px;
+  box-shadow: 0 0 5px #542344;
+}
+
+.createaccount {
+  font-family: 'Open Sans', sans-serif;
+  padding: 10px;
+  line-height: 25px;
+  font-size: 15px;
+}
+
 .navbar {
   flex: 0 0 200px;
   margin: 5px;
   margin-top: 15px;
-  border: 2px;
-  border-radius: 2px;
-  box-shadow: 0 0 5px #542344;
   padding: 10px;
   text-align: center;
 }
@@ -60,9 +77,6 @@ a.logo {
 .content {
   margin: 5px;
   margin-top: 15px;
-  border: 2px;
-  border-radius: 2px;
-  box-shadow: 0 0 5px #542344;
   padding: 10px;
   width: 100%
 }
