--- a/templates/viewProject.html
+++ b/templates/viewProject.html
@@ -11,11 +11,25 @@
   </div>
   <div class="userbox">
     {% if current_user %}
-      <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
-        FirstName LastName</p>
-      <p>email</p>
+      {% if current_person %}
+        <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
+          {{current_person.firstname}} {{current_person.lastname}}</p>
+        <p>{{current_user.email()}}</p>
+      {% else %}
+        <div class="createaccount">
+            <div id="input_box" class="box_card">
+              <form method="post" action="/viewproject">
+                Your name: <input name="firstname" value="First" onclick="this.select()">
+                <input name="lastname" value="Last" onclick="this.select()"><br>
+                Bio: <input name="biography">
+                <button>Create Profile</button>
+              </form>
+            </div>
+        </div>
+      {% endif %}
       <p>View Profile | <a href="{{logout_url}}">Log Out</a><p>
     {% else %}
+      <br><br>
       <a href="{{login_url}}">Log In</a>
     {% endif %}
   </div>
@@ -25,9 +39,8 @@
   <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
 </div>
 
-<h1 class="titlePanel">{{title}}</h1>
+<div class="titlePanel">{{title}}</div>
 
-
-<div class="statusBox">{{panels}}</div>
+<div class="panelBox">{{panels}}</div>
   <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
 </div>
