--- a/templates/home.html
+++ b/templates/home.html
@@ -6,17 +6,22 @@
 
 
 <style>
-
+body {
+font-family: 'Quicksand', sans-serif;
+}
 
 table {
     border-collapse: separate;
-    border-spacing: 0 3em;
+    border-spacing: 100px 50px;
 }
 
+
+
 #artworks {
-  height: 250px;
-  width: 250px;
+  height: 300px; /*make adjustable as extension*/
+  width: 300px;
   border: 1px solid black;
+
   }
 
 
@@ -31,11 +36,25 @@ table {
   </div>
   <div class="userbox">
     {% if current_user %}
-      <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
-        FirstName LastName</p>
-      <p>email</p>
+      {% if current_person %}
+        <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
+          {{current_person.firstname}} {{current_person.lastname}}</p>
+        <p>{{current_user.email()}}</p>
+      {% else %}
+        <div class="createaccount">
+            <div id="input_box" class="box_card">
+              <form method="post" action="/">
+                Your name: <input name="firstname" value="First" onclick="this.select()">
+                <input name="lastname" value="Last" onclick="this.select()"><br>
+                Bio: <input name="biography">
+                <button>Create Profile</button>
+              </form>
+            </div>
+        </div>
+      {% endif %}
       <p>View Profile | <a href="{{logout_url}}">Log Out</a><p>
     {% else %}
+      <br><br>
       <a href="{{login_url}}">Log In</a>
     {% endif %}
   </div>
@@ -44,33 +63,26 @@ table {
 
 
 
-
-
-<table align="center" id="columns">
+<br></br>
+<h1 style="text-align: center;">BROWSE THE LATEST PROJECTS</h1>
+<table align="center" id="columns" cellspacing="100">
     <!--put in profiles-->
-<!--    {% for project in projects %}
-<div class="artworks"
 
-  style="all the fields;"></div>
-    {% endfor %} -->
 
-    <tr>
-    <td id="artworks">
+  <tr>
+    <td id="artworks"><a href="/">{{projects}}
+    </a></td>
+
+    <td id="artworks">{{projects}}
     </td>
-    <th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>
-    </th><th></th><th></th><th></th>
+  </tr>
 
-    <td id="artworks">
-    </td>
-    </tr>
 
-    <tr>
-    <td id="artworks">
+  <tr>
+    <td id="artworks">{{projects}}
     </td>
-    <th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>
-    </th><th></th><th></th><th></th>
 
-    <td id="artworks">
+    <td id="artworks">{{projects}}
     </td>
-    </tr>
+  </tr>
 </table>
