minor bugs on login fixed

--- a/templates/viewProject.html
+++ b/templates/viewProject.html
@@ -27,7 +27,7 @@
             </div>
         </div>
       {% endif %}
-      <p>View Profile | <a href="{{logout_url}}">Log Out</a><p>
+      <p><a href="profile">View Profile</a> | <a href="{{logout_url}}">Log Out</a><p>
     {% else %}
       <br><br>
       <a href="{{login_url}}">Log In</a>
