--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -22,7 +22,7 @@ body {
 
 h2 {
   font-family: 'Quicksand', sans-serif;
-  font-size: 30px;
+  font-size: 28px;
   line-height: 0px;
   padding-left: 10px;
   font-weight: normal;
@@ -84,7 +84,7 @@ a.logo {
 .profilepic {
   height: 100px;
   border-radius: 50px;
-  margin-top: 10px;
+  margin: 10px;
 }
 
 .heading {
