--- a/templates/profile.html
+++ b/templates/profile.html
@@ -26,7 +26,7 @@
             </div>
         </div>
       {% endif %}
-      <p>View Profile | <a href="{{logout_url}}">Log Out</a><p>
+      <p><a href="profile">View Profile</a> | <a href="{{logout_url}}">Log Out</a><p>
     {% else %}
       <br><br>
       <a href="{{login_url}}">Log In</a>
@@ -36,8 +36,8 @@
 
 <div class="pagebody">
   <div class="navbar redborder">
-    <img class="profilepic" src="../photos/logo.png">
-    <p>{{current_person.firstname}} {{current_person.lastname}}</p>
+    <img class="profilepic" src="../photos/profile.png">
+    <h2 style="font-weight: 600;">{{current_person.firstname}} {{current_person.lastname}}</h2>
     <p>{{current_person.biography}}</p>
   </div>
   <div class="content redborder">
