--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -129,6 +129,7 @@ a.logo {
 }
 
 .statusBox {
+  font-family: 'Quicksand';
   display: flex;
   position: relative;
   margin: 5px;
@@ -143,6 +144,7 @@ a.logo {
 }
 
 .panelBox {
+  font-family: 'Quicksand';
   display: flex;
   margin: 5px;
   margin-top: 15px;
@@ -156,9 +158,10 @@ a.logo {
 }
 
 .titlePanel {
+  font-family: 'Quicksand';
   text-align: center;
-  width: 100%;
-  display: inline-block
+  width: 50px;
+  display: inline-block;
 }
 
 
