--- a/templates/viewProject.html
+++ b/templates/viewProject.html
@@ -27,7 +27,7 @@
             </div>
         </div>
       {% endif %}
-      <p><a href="profile">View Profile</a> | <a href="{{logout_url}}">Log Out</a><p>
+      <p><a href="/profile">View Profile</a> | <a href="{{logout_url}}">Log Out</a><p>
     {% else %}
       <br><br>
       <a href="{{login_url}}">Log In</a>
@@ -39,8 +39,15 @@
   <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
 </div>
 
-<div class="titlePanel">{{title}}</div>
+<h1 class="titlePanel">egergregergregegergr</h1>
 
 <div class="panelBox">{{panels}}</div>
   <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
 </div>
+
+<!-- (% if panelBox is not %)
+
+ (% else %)
+
+ (% endif %)
+-->
