creating projects functions now

--- a/templates/newproject.html
+++ b/templates/newproject.html
@@ -37,6 +37,8 @@
 <div class="content">
   <h2 style="padding-left, padding-top: 20px">Create a New Project</h2>
   <form action="/viewproject" method="post">
+    Title: <input type="text" name="title">
+    <br>
     Rows:
     <select name="rows">
       <option value="1">1</option>
