--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -48,6 +48,19 @@ a.logo {
   display: block;
 }
 
+.submitbutton {
+  background-color: #A0D2DB;
+  font-size: 15px;
+  margin: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.submitbutton:hover {
+  background-color: #E3F2F2;
+  cursor: pointer;
+}
+
 .pagebody {
   display: flex;
   font-family: 'Open Sans', sans-serif;
@@ -160,7 +173,15 @@ a.logo {
 }
 
 .listprojects {
-  
+  text-align: center;
+
+}
+
+.displayproject {
+  margin: 20px;
+  margin-top: 30px;
+  padding: 10px;
+  width: auto;
 }
 
 .titlePanel {
@@ -179,6 +200,7 @@ a.logo {
   height: 2px;
   margin-left: 20px;
   margin-right: 20px;
+  margin-bottom: 10px;
 }
 
 
