--- a/templates/profile.html
+++ b/templates/profile.html
@@ -35,10 +35,12 @@
 </div>
 
 <div class="pagebody">
-  <div class="navbar redborder">
-    <img class="profilepic" src="../photos/profile.png">
-    <h2 style="font-weight: 600;">{{current_person.firstname}} {{current_person.lastname}}</h2>
-    <p>{{current_person.biography}}</p>
+  <div class="navbar" style="padding: 0px; margin-right: 10px;">
+    <div class="redborder" style="padding: 10px;">
+      <img class="profilepic" src="../photos/profile.png">
+      <h2 style="font-weight: 600;">{{current_person.firstname}} {{current_person.lastname}}</h2>
+      <p>{{current_person.biography}}</p>
+    </div>
   </div>
   <div class="content redborder">
 
