edited stylesheets, edited button

--- a/templates/home.html
+++ b/templates/home.html
@@ -37,10 +37,11 @@
 <div class="pagebody" style="flex-direction: column">
   <br></br>
   <h1 style="text-align: center;">BROWSE THE LATEST PROJECTS</h1>
-  <form action="/" method="post">
-  <h2 style="text-align: center;"><button id="create" style="margin-top: 30px;">CREATE A NEW PROJECT</button></h2>
-  </form>
   <div class="divider"></div>
+<form action="/newproject" method="get">
+  <h2 style="text-align: center;"><button id="create" style="margin-top: 30px;"><a href="newproject">CREATE A NEW PROJECT</a></button></h2>
+</form>
+
   <table align="center" id="columns" cellspacing="100">
       <!--put in profiles-->
 
