--- a/templates/viewProject.html
+++ b/templates/viewProject.html
@@ -33,7 +33,8 @@
     <div class="divider"></div>
     <div class="panelBox redborder">
       {% for panel in panels %}
-        <div class="panel" style="width: {{panel.width}}px; height: {{panel.height}}px">
+        <div class="panel" style="width: {{panel.width}}px; height: {{panel.height}}px;"
+        onclick="location.href='/updatepanel'">
           {{panel.content}}
         </div>
       {% endfor %}
@@ -41,14 +42,4 @@
 
   </div>
 
-  <!-- <div class="panelBox">{{panels}}</div>
-    <p style="font-family: 'Quicksand', sans-serif; font-size: 18px;">
-  </div> -->
-
 </div>
-<!-- (% if panelBox is not %)
-
- (% else %)
-
- (% endif %)
--->
