--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -59,6 +59,7 @@ a.logo {
   background-color: #A0D2DB;
   font-size: 15px;
   margin: 5px;
+  padding: 5px;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -171,6 +172,10 @@ a.logo {
 .panel {
   background-color: green;
   margin: 5px;
+}
+
+.panel:hover {
+  cursor: pointer;
 }
 
 .panelBox {
