--- a/templates/viewProject.html
+++ b/templates/viewProject.html
@@ -34,7 +34,8 @@
     <div class="panelBox redborder">
       {% for panel in panels %}
         <div class="panel" style="width: {{panel.width}}px; height: {{panel.height}}px; position: relative;">
-          {{panel.content}}
+          <img width="{{panel.width}}" src="/photo?key={{panel.key.urlsafe()}}"
+          alt="PANEL CONTENT">
           <form method="get" action="updatepanel" style="position: absolute; bottom: 0;">
             <div style="display: none;">
               <input name="key" value="{{panel.key.urlsafe()}}">
