--- a/templates/home.html
+++ b/templates/home.html
@@ -42,7 +42,11 @@
   <h2 style="text-align: center;">Browse the Latest Projects</h2>
   <div class="divider"></div>
 <form action="/newproject" method="get">
-  <h2 style="text-align: center;"><button class="submitbutton" style="margin-top: 10px; ">CREATE A NEW PROJECT</button></h2>
+  {% if current_person %}
+    <h2 style="text-align: center;">
+      <button class="submitbutton" style="margin-top: 10px;">Create a New Project</button>
+    </h2>
+  {% endif %}
 </form>
 
 <table align="center" id="columns" cellspacing="100">
