color changes and idk honestly forgot what the code changes were

--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,7 @@
 <form action="/newproject" method="get">
   {% if current_person %}
     <h2 style="text-align: center;">
-      <button class="submitbutton" style="margin-top: 10px;">Create a New Project</button>
+      <button class="createbutton" style="margin-top: 10px;">Create a New Project</button>
     </h2>
   {% endif %}
 </form>
