--- a/templates/profile.html
+++ b/templates/profile.html
@@ -52,7 +52,8 @@
       <h2 style="float: left">My Projects</h2>
       <div style=" float: right; padding-right: 10px">
         {% if current_person %}
-        <a style="line-height: 30px;" href="newproject">New Project</a>
+        <a href="newproject" class="submitbutton" style="margin: 10px; line-height: 45px;">
+          New Project</a>
         {% endif %}
       </div>
     </div>
