--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -12,14 +12,13 @@ Blue: #5B92BD
 Mint: #A0D2DB
 Pale Mint: #BEE7E8
 PALER mint: #E3F2F2
-VERY light gray/purple: #e2e0e2;
+VERY light gray/purple: #fdfcff;
 
 */
 
 
 body {
   font-family: 'Open Sans', sans-serif;
-  background-color: #e2e0e2;
 }
 
 h2 {
@@ -56,16 +55,33 @@ a.logo {
 }
 
 .submitbutton {
-  background-color: #A0D2DB;
+  background-color: #E3F2F2;
   font-size: 15px;
   margin: 5px;
   padding: 5px;
   padding-left: 20px;
   padding-right: 20px;
+  border: none;
+  color: black;
 }
 
 .submitbutton:hover {
-  background-color: #E3F2F2;
+  background-color: #BEE7E8;
+  cursor: pointer;
+}
+
+.createbutton {
+  background-color: #d5efef;
+  font-size: 15px;
+  margin: 5px;
+  padding: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border: none;
+}
+
+.createbutton:hover {
+  background-color: #BEE7E8;
   cursor: pointer;
 }
 
@@ -87,7 +103,7 @@ a.logo {
   display: flex;
   font-family: 'Open Sans', sans-serif;
   width: 100%;
-  background-color: #e2e0e2;
+  background-color: #f8f7f9;
 }
 
 .redborder {
