--- a/templates/updatepanel.html
+++ b/templates/updatepanel.html
@@ -32,11 +32,24 @@
     </div>
     <div class="divider"></div>
     <div class="panelBox redborder">
-      <div class="panel" style="width: {{panel.width}}px; height: {{panel.height}}px">
-        <img width="{{panel.width}}" src="/photo?key={{panel.key.urlsafe()}}"
-        alt="PANEL CONTENT">
+
+      <div>
+
+        <form method="get" action="viewproject">
+          <div style="display: none;">
+            <input name="key" value="{{project.key.urlsafe()}}">
+          </div>
+          <input class="submitbutton" type="submit" value="Back to Project">
+        </form>
+
+        <div class="panel" style="width: {{panel.width}}px; height: {{panel.height}}px">
+          <img width="{{panel.width}}" src="/photo?key={{panel.key.urlsafe()}}"
+          alt="PANEL CONTENT">
+        </div>
+
       </div>
       <div style="padding: 5px; margin: 10px;">
+        {% if current_person %}
         <form action="uploadphoto" method="POST" enctype="multipart/form-data">
           <div style="display: none;">
             <input name="key" value="{{panel.key.urlsafe()}}">
@@ -45,14 +58,10 @@
           <input type="file" name="file"><br>
           <input type="submit" name="submit" value="Submit">
         </form>
+        {% endif %}
         <br>
-        <form method="get" action="viewproject">
-          <div style="display: none;">
-            <input name="key" value="{{project.key.urlsafe()}}">
-          </div>
-          <input class="submitbutton" type="submit" value="Back to Project">
-        </form>
       </div>
+
     </div>
 
   </div>
