--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
             </div>
         </div>
       {% endif %}
-      <p><a href="/profile">View Profile</a> | <a href="{{logout_url}}">Log Out</a><p>
+      <p><a href="/profile">View Profile</a> | <a href="{{logout_url}}">Log Out</a></p>
     {% else %}
       <br><br>
       <a href="{{login_url}}">Log In</a>
@@ -53,7 +53,7 @@
       <!--put in profiles-->
       {% set count = 1 %}
       {% for project in projects %}
-        {% if count%2==1 %} <!--for every other project, create a new row in the table-->
+        {% if count%2==1 %}
         <tr>
             <td class="artworks redborder" style="font-size: 20px; vertical-align: top; text-align: center;">
               <a href="/viewproject?key={{project.key.urlsafe()}}">
