--- a/templates/preview.html
+++ b/templates/preview.html
@@ -3,10 +3,13 @@
 
 <div class="panelBox redborder">
   {% for panel in panels %}
-    <div class="panel" style="width: {{panel.width}}px; height: {{panel.height}}px; position: relative;"
-  >
-      <img width="{{panel.width}}" src="/photo?key={{panel.key.urlsafe()}}"
-      alt="PANEL CONTENT">
+    <div class="panel" style="width: {{panel.width}}px; height: {{panel.height}}px; position: relative;">
+      {% if panel.filled %}
+        <img width="{{panel.width}}" src="/photo?key={{panel.key.urlsafe()}}"
+        alt="PANEL CONTENT">
+      {% else %}
+        <img width="{{panel.width}}" src="../photos/upload.png">
+      {% endif %}
     </div>
 
   {% endfor %}
