finally fixed errors for creating new project

--- a/templates/newproject.html
+++ b/templates/newproject.html
@@ -39,16 +39,20 @@
   <form action="/viewproject" method="post">
     Title: <input type="text" name="title">
     <br>
-    Rows:
+    Columns:
     <select name="rows">
       <option value="1">1</option>
       <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
     </select>
     <br>
-    Columns:
+    Rows:
     <select name="columns">
       <option value="1">1</option>
       <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
     </select>
     <br>
     <button>Create Your Project!</button>
