--- a/templates/preview.html
+++ b/templates/preview.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <title>preview</title>
 
-<div class="panelBox redborder">
+<div class="panelBox redborder"  style="max-height: 100%;
+    max-width: 100%; object-fit: scale-down;">
   {% for panel in panels %}
-    <div class="panel" style="width: {{panel.width}}px; height: {{panel.height}}px; position: relative;"
-  >
+    <div class="panel" style="width: {{panel.width}}px; height: {{panel.height}}px;">
       <img width="{{panel.width}}" src="/photo?key={{panel.key.urlsafe()}}"
       alt="PANEL CONTENT">
     </div>
