--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -12,7 +12,7 @@ Blue: #5B92BD
 Mint: #A0D2DB
 Pale Mint: #BEE7E8
 PALER mint: #E3F2F2
-VERY light gray/purple: #fdfcff;
+VERY light gray/purple: #f8f7f9;
 
 */
 
@@ -111,7 +111,6 @@ a.logo {
   border-radius: 2px;
   box-shadow: 0 0 5px #542344;
   background-color: white;
-
 }
 
 .artworks {
@@ -121,16 +120,17 @@ a.logo {
   min-height: 400px;
 
   }
+
 .create {
-    background-color: #e7e7e7;
-    border: none;
-    color: black;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
+  background-color: #e7e7e7;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
 
 .createaccount {
   font-family: 'Open Sans', sans-serif;
