--- a/templates/preview.html
+++ b/templates/preview.html
@@ -5,10 +5,10 @@
   {% for panel in panels %}
     <div class="panel" style="width: {{panel.width}}px; height: {{panel.height}}px; position: relative;">
       {% if panel.filled %}
-        <img width="{{panel.width}}" src="/photo?key={{panel.key.urlsafe()}}"
+        <img width="{{panel.width}}" height="{{panel.height}}" src="/photo?key={{panel.key.urlsafe()}}"
         alt="PANEL CONTENT">
       {% else %}
-        <img width="{{panel.width}}" src="../photos/upload.png">
+        <img width="{{panel.width}}" height="{{panel.height}}" src="../photos/upload.png">
       {% endif %}
     </div>
 
