--- a/templates/viewProject.html
+++ b/templates/viewProject.html
@@ -30,7 +30,8 @@
     <div class="pageheader" style="flex: none;">
       <h2 style="">{{project.title}}</h2>
       <p style="font-style: italic; color: #696969; line-height: 15px; padding-left: 10px;">
-        Owner: {{project.owner.get().email}}</p>
+        Owner: <a href="profile?profile_key={{project.owner.get().key.urlsafe()}}">
+          {{project.owner.get().email}}</a></p>
     </div>
     <div class="divider"></div>
     <div class="panelBox redborder">
