--- a/templates/viewProject.html
+++ b/templates/viewProject.html
@@ -31,7 +31,7 @@
       <h2 style="">{{project.title}}</h2>
       <p style="font-style: italic; color: #696969; line-height: 15px; padding-left: 10px;">
         Owner: <a href="profile?profile_key={{project.owner.get().key.urlsafe()}}">
-          {{project.owner.get().email}}</a></p>
+          {{project.owner.get().firstname}} {{project.owner.get().lastname}}</a></p>
     </div>
     <div class="divider"></div>
     <div class="panelBox redborder">
